# brasileirao-pipeline

./: .gitignore  README.md  docker-compose.override.yml  main.py  pyproject.toml  requirements.txt  spec.md
agent/: agent.py  memory.py  system_prompt.py  tools.py
dags/: extract_brasileirao.py
dbt_brasileirao/: dbt_project.yml  profiles.yml
dbt_brasileirao/models/marts/: dim_matches.sql  dim_matches_future.sql  dim_matches_future.yml  dim_players_transfermarkt.sql  fct_classificacao.sql  marts.yml
dbt_brasileirao/models/staging/: stg_brasileirao.sql  stg_brasileirao.yml  stg_matches_brasileirao.sql  stg_matches_brasileirao_future.sql  stg_matches_brasileirao_future.yml  stg_partidas.yml  stg_transfermarkt_players.sql  stg_transfermarkt_players.yml
include/scrapers/: br_scraper.py  scrape_transfermarkt.py
