[project]
name = "brasileirao-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "curl-cffi>=0.14.0",
    "dbt-duckdb>=1.10.1",
    "fastparquet>=2026.3.0",
    "html5lib>=1.1",
    "lxml>=6.0.2",
    "pandas>=3.0.1",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
    "pyarrow>=23.0.1",
    "requests>=2.33.0",
]
